<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/identifyCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detectCard"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="120dp"
        android:onClick="onIdentifyClick"
        app:cardBackgroundColor="@color/whiteBodyColor"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <TextView
                style="@style/viewParent.headerText"
                android:text="@string/identify_card_title"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:text="@string/identify_card_desc"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center|start"
            android:adjustViewBounds="false"
            android:contentDescription="@string/card_icon_desc"
            android:cropToPadding="false"
            android:elevation="13dp"
            android:paddingEnd="15dp"
            android:src="@drawable/card_icon" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/detectCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="120dp"
        android:onClick="onDetectClick"
        app:cardBackgroundColor="@color/whiteBodyColor"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <TextView
                style="@style/viewParent.headerText"
                android:text="@string/detect_card_title"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:layout_width="214dp"
                android:layout_height="66dp"
                android:text="@string/detect_card_desc"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center|start"
            android:adjustViewBounds="false"
            android:contentDescription="@string/card_icon_desc"
            android:cropToPadding="false"
            android:elevation="13dp"
            android:paddingEnd="15dp"
            android:src="@drawable/card_icon" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/verifyCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detectCard"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="120dp"
        android:onClick="onVerifyClick"
        app:cardBackgroundColor="@color/whiteBodyColor"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6">

        <LinearLayout
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <TextView
                style="@style/viewParent.headerText"
                android:text="Verify"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:text="Verify if two faces belong to the same person, or if a face belongs to a person."
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center|start"
            android:adjustViewBounds="false"
            android:contentDescription="@string/card_icon_desc"
            android:cropToPadding="false"
            android:elevation="13dp"
            android:paddingEnd="15dp"
            android:src="@drawable/card_icon" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="294dp" />

</androidx.constraintlayout.widget.ConstraintLayout>